--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>To-Do List</title>
+	<link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700" rel="stylesheet">
 	<link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
@@ -14,7 +15,6 @@
 		<li><span>X</span> Go to potions class</li>
 		<li><span>X</span> Buy new robes</li>
 		<li><span>X</span> Visit Hagrid</li>
-		<li></li>
 	</ul>
 	</div>
 	
