--- a/index.html
+++ b/index.html
@@ -4,17 +4,18 @@
 	<meta charset="UTF-8">
 	<title>To-Do List</title>
 	<link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700" rel="stylesheet">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 	<link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
 
 	<div id="container">
-		<h1>To-Do List</h1>
+		<h1>To-Do List <i class="fa fa-plus"></i></h1>
 		<input type="text" placeholder="Add New Todo">
 		<ul>
-		<li><span>X</span> Go to potions class</li>
-		<li><span>X</span> Buy new robes</li>
-		<li><span>X</span> Visit Hagrid</li>
+		<li><span><i class="fa fa-trash"></i></span> Go to potions class</li>
+		<li><span><i class="fa fa-trash"></i></span> Buy new robes</li>
+		<li><span><i class="fa fa-trash"></i></span> Visit Hagrid</li>
 	</ul>
 	</div>
 	
